--- a/FrontEnd/railridebmx-frontend/package.json
+++ b/FrontEnd/railridebmx-frontend/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.264.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
