--- a/FrontEnd/railridebmx-frontend/package.json
+++ b/FrontEnd/railridebmx-frontend/package.json
@@ -14,10 +14,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "babel-plugin-macros": "^3.1.0",
+    "chart.js": "^4.4.1",
     "formik": "^2.4.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.264.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
