ajout du dockerfile

--- a/Backend/RailRideBMXHexagonale/appsettings.json
+++ b/Backend/RailRideBMXHexagonale/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DataBaseConnection": "Server=DESKTOP-2H5UMMG\\SQLEXPRESS;Database=RailRideBmxDB;Trusted_Connection=true;TrustServerCertificate=true;"
+    "DataBaseConnection": "Server=172.17.0.2,1433;Database=RailRideBmxDB;User Id=sa; Password=Mat13836;Trusted_Connection=true;TrustServerCertificate=true;"
   },
   "Jwt": {
     "Issuer": "https://localhost:7134",
