ajout du docker file dans le backend, ajout du docker compose ainsi que des variables d'environement pour le développement et la production

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,7 +1,6 @@
 # Utilise une image de base avec le SDK ASP.NET Core pour la construction
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /app
-
 # Copie les fichiers de projet et restaure les dépendances
 COPY *.sln ./
 COPY RailRideBMXHexagonale/*.csproj RailRideBMXHexagonale/
@@ -19,4 +18,6 @@ RUN dotnet publish -c Release -o out
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS runtime
 WORKDIR /app
 COPY --from=build /app/out ./
-ENTRYPOINT ["dotnet", "RailRideBMXHexagonale.dll"]
+
+EXPOSE 80
+CMD ["bash", "-c", "sleep 30 && dotnet RailRideBMXHexagonale.dll"]
